* grub-core/commands/nativedisk.c: Customize the list of modules on 	platform. Don't try to search for disks already using native drivers.

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -510,6 +510,10 @@ module = {
 module = {
   name = nativedisk;
   common = commands/nativedisk.c;
+
+  enable = x86;
+  enable = mips_loongson;
+  enable = mips_qemu_mips;
 };
 
 module = {
