--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -134,7 +134,9 @@ kernel = {
 
   i386 = kern/i386/dl.c;
 
-  i386_coreboot_multiboot_qemu = kern/i386/coreboot/init.c;
+  i386_coreboot = kern/i386/coreboot/init.c;
+  i386_multiboot = kern/i386/coreboot/init.c;
+  i386_qemu = kern/i386/qemu/init.c;
   i386_coreboot_multiboot_qemu = term/i386/pc/vga_text.c;
 
   efi = disk/efi/efidisk.c;
