--- a/tests/hddboot_test.in
+++ b/tests/hddboot_test.in
@@ -20,9 +20,10 @@ grubshell=@builddir@/grub-shell
 . "@builddir@/grub-core/modinfo.sh"
 
 case "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" in
+    # PLATFORM: emu is different
     *-emu)
 	exit 0;;
-    # Flash targets
+    # PLATFORM: Flash targets
     i386-qemu | i386-coreboot | mips-qemu_mips | mipsel-qemu_mips)
 	exit 0;;
     # FIXME: currently grub-shell uses only -kernel for loongson
