New series of tests for gfxterm and gfxmenu.

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -1747,6 +1747,11 @@ module = {
 };
 
 module = {
+  name = gfxterm_menu;
+  common = tests/gfxterm_menu.c;
+};
+
+module = {
   name = bitmap;
   common = video/bitmap.c;
   enable = videomodules;
