Fix test -a and -o precedence. 	Reported by: adrian15.

--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -583,6 +583,12 @@ script = {
 
 script = {
   testcase;
+  name = grub_script_test;
+  common = tests/grub_script_test.in;
+};
+
+script = {
+  testcase;
   name = grub_script_echo1;
   common = tests/grub_script_echo1.in;
 };
