--- a/tests/grub_func_test.in
+++ b/tests/grub_func_test.in
@@ -3,7 +3,7 @@ set -e
 
 . "@builddir@/grub-core/modinfo.sh"
 
-out=`echo all_functional_test | @builddir@/grub-shell`
+out=`echo all_functional_test | @builddir@/grub-shell --timeout=3600`
 
 if [ "$(echo "$out" | tail -n 1)" != "ALL TESTS PASSED" ]; then
   echo "Functional test failure: $out"
