* configure.ac: Don't disable extended registers on emu.

--- a/configure.ac
+++ b/configure.ac
@@ -466,7 +466,7 @@ if test "x$target_cpu" = xi386; then
   fi
 fi
 
-if test "x$target_cpu" = xi386 || test "x$target_cpu" = xx86_64; then
+if ( test "x$target_cpu" = xi386 || test "x$target_cpu" = xx86_64 ) && test "x$platform" != xemu; then
   # Some toolchains enable these features by default, but they need
   # registers that aren't set up properly in GRUB.
   TARGET_CFLAGS="$TARGET_CFLAGS -mno-mmx -mno-sse -mno-sse2 -mno-3dnow"
