--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -163,7 +163,7 @@ program = {
   common = util/resolve.c;
   common = grub-core/kern/emu/argp_common.c;
 
-  common = grub-core/kern/arm/dl.c;
+  common = grub-core/kern/arm/dl_helper.c;
 
   extra_dist = util/grub-mkimagexx.c;
 
