* util/grub-install.in: Gettextize "Not found" message.

--- a/util/grub-install.in
+++ b/util/grub-install.in
@@ -348,7 +348,9 @@ if [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = "i386-pc" ] || [ "$
     if test -f "$1"; then
         :
     else
-        echo "$1: Not found." 1>&2
+	# TRANSLATORS: This message is shown when required executable `%s'
+	# isn't found
+        gettext_printf "%s: Not found.\n" "$1" 1>&2
         exit 1
     fi
 fi
@@ -357,7 +359,9 @@ set "$grub_mkimage" dummy
 if test -f "$1"; then
     :
 else
-    echo "$1: Not found." 1>&2
+    # TRANSLATORS: This message is shown when required executable `%s'
+    # isn't found
+    gettext_printf "%s: Not found.\n" "$1" 1>&2
     exit 1
 fi
 
@@ -697,14 +701,18 @@ elif [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = "i386-ieee1275" ]
 	if test -f "$1"; then
 	    :
 	else
-	    echo "$1: Not found." 1>&2
+            # TRANSLATORS: This message is shown when required executable `%s'
+            # isn't found
+	    gettext_printf "%s: Not found.\n" "$1" 1>&2
 	    exit 1
 	fi
 	set "$nvsetenv" dummy
 	if test -f "$1"; then
 	    :
 	else
-	    echo "$1: Not found." 1>&2
+            # TRANSLATORS: This message is shown when required executable `%s'
+            # isn't found
+	    gettext_printf "%s: Not found.\n" "$1" 1>&2
 	    exit 1
 	fi
 	if  [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" != "powerpc-ieee1275" ] \
