* tests/util/grub-shell.in: Remove the temporary directory on grub-emu 	after the test.

--- a/tests/util/grub-shell.in
+++ b/tests/util/grub-shell.in
@@ -418,6 +418,7 @@ elif [ x$boot = xemu ]; then
     cp "${cfgfile}" "$grubdir/grub.cfg"
     cp "${source}" "$grubdir/testcase.cfg"
     @builddir@/grub-core/grub-emu -m "$device_map" -d "$grubdir" | tr -d "\r" | do_trim
+    rm -rf "$grubdir"
 else
     timeout -s KILL $timeout "${qemu}" ${qemuopts} -nographic ${serial_null} -serial file:/dev/stdout -monitor file:/dev/null -${device} ${isofile} ${bootdev} | cat | tr -d "\r" | do_trim
 fi
