* gentpl.py: Replace EXTRA_DIST with dist_noinst_DATA or 	dist_<directory>_DATA. EXTRA_DIST is ignored by automake inside 	false conditions. 	* conf/Makefile.common: define dist_grubconf_DATA

--- a/conf/Makefile.common
+++ b/conf/Makefile.common
@@ -151,7 +151,7 @@ bin_PROGRAMS =
 platform_DATA =
 sbin_PROGRAMS =
 check_SCRIPTS =
-grubconf_DATA =
+dist_grubconf_DATA =
 check_PROGRAMS =
 noinst_SCRIPTS =
 noinst_PROGRAMS =
