* grub-core/partmap/dfly.c: New partition map.

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -1653,6 +1653,11 @@ module = {
 };
 
 module = {
+  name = part_dfly;
+  common = partmap/dfly.c;
+};
+
+module = {
   name = msdospart;
   common = parttool/msdospart.c;
 };
