* Makefile.am, conf/Makefile.common: Fix compilation problem with some 	automake versions.

--- a/conf/Makefile.common
+++ b/conf/Makefile.common
@@ -54,7 +54,7 @@ CPPFLAGS_DEFAULT += -I$(top_srcdir)/include
 CPPFLAGS_DEFAULT += -I$(top_builddir)/include
 CPPFLAGS_DEFAULT += -I$(top_srcdir)/grub-core/lib/libgcrypt-grub/include
 CPPFLAGS_DEFAULT += -I$(top_srcdir)/grub-core/lib/libgcrypt-grub/src/
-CCASFLAGS_DEFAULT = -DASM_FILE=1
+CCASFLAGS_DEFAULT = $(CPPFLAGS_DEFAULT) -DASM_FILE=1
 
 LDADD_KERNEL =
 
